# Modern-Cpp-Course-For-CV-2020

./: .clang-tidy  .gitignore  LICENSE  README.md
homework_1/: README.md
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  build.sh  install.sh
homework_1/task_2/solution/: README.md
homework_1/task_2/src/: CmakeLists.txt
homework_2/: CMakeLists.txt  README.md
homework_2/task_1/: CMakeLists.txt  install.sh  task_1.cpp  test.cpp
homework_2/task_2/: CMakeLists.txt  install.sh  task_2.cpp
homework_3/: CMakeLists.txt  README.md  install.sh
homework_3/api/: html_writer.hpp  image_browser.hpp
homework_3/src/: CMakeLists.txt  html_writer.cpp  image_browser.cpp  main.cpp
homework_3/web_app/: Saeed_html_file.html  app.html
homework_4/: README.md
homework_4/src/: myvector.cpp
